syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

service Keyman {
  rpc List(ListRequest) returns (stream Metadata);
  rpc Get(GetRequest) returns (stream GetResponse);
  rpc Set(stream SetRequest) returns (Metadata);
  rpc Log(LogRequest) returns (stream Metadata);
}

message Metadata {
  string name = 1;
  string hash = 2;
  google.protobuf.Timestamp time = 3;
  uint64 size = 4;
}

message ListRequest {
  bool all = 1;
}

message GetRequest {
  string name = 1;
  string hash = 2;
}

message GetResponse {
  bytes chunk = 1;
}

message SetRequest {
  oneof value {
    string name = 1;
    bytes chunk = 2;
  }
}

message LogRequest {
  string name = 1;
  uint64 limit = 2;
}
